--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-GB" data-theme="light">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Chris Wren | Portfolio</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./styles/style.css"
+    />
   </head>
   <body>
     <div id="content" class="content">
@@ -77,7 +82,7 @@
         </p>
       </div>
     </div>
-    <script src="./commands.js"></script>
-    <script src="./main.js"></script>
+    <script src="./scripts/commands.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
